--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,27 @@
   --rating: #ffc531;
   --font-family: "Inter", sans-serif;
 }
+
+.container {
+  width: 1440px;
+  padding: 0 64px;
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
+button {
+  cursor: pointer;
+}
